opam-version: "2.0"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: "Aaron L. Zeng <me@bcc32.com>"
homepage: "https://github.com/bcc32/ecaml-bf"
bug-reports: "https://github.com/bcc32/ecaml-bf/issues"
license: "MIT"
tags: ["ecaml" "emacs"]
dev-repo: "git://github.com/bcc32/ecaml-bf"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "ecaml" {>= "v0.11.0" & < "v0.12.0"}
]
